--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <!-- dustech/  13 Nov 2019 12:52:03 GMT -->
 <head>
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="irstheme">
 
-    <title> Dustech - Industry & Factory HTML Template </title>
+    <title> Dustech - Indústria & Fábrica - Template HTML </title>
     
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon.css" rel="stylesheet">
@@ -62,7 +62,7 @@
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <button type="button" class="open-btn">
-                            <span class="sr-only">Toggle navigation</span>
+                            <span class="sr-only">Alternar navegação</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -73,65 +73,65 @@
                         <button class="close-navbar"><i class="ti-close"></i></button>
                         <ul class="nav navbar-nav">
                             <li class="menu-item-has-children">
-                                <a href="#">Home</a>
+                                <a href="#">Início</a>
                                 <ul class="sub-menu">
-                                    <li><a href="index-2.html">Home Default</a></li>
-                                    <li><a href="index-3.html">Home style 2</a></li>
-                                    <li><a href="index-4.html">Home style 3</a></li>
+                                    <li><a href="index-2.html">Início Padrão</a></li>
+                                    <li><a href="index-3.html">Início estilo 2</a></li>
+                                    <li><a href="index-4.html">Início estilo 3</a></li>
                                 </ul>
                             </li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="about.html">Sobre</a></li>
                             <li class="menu-item-has-children">
-                                <a href="#">Pages</a>
+                                <a href="#">Páginas</a>
                                 <ul class="sub-menu">
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
-                                    <li><a href="testimonials.html">Testimonials</a></li>
-                                    <li><a href="testimonials-s2.html">Testimonials style 2</a></li>
-                                    <li><a href="team.html">Team</a></li>
+                                    <li><a href="about.html">Sobre</a></li>
+                                    <li><a href="contact.html">Contato</a></li>
+                                    <li><a href="testimonials.html">Depoimentos</a></li>
+                                    <li><a href="testimonials-s2.html">Depoimentos estilo 2</a></li>
+                                    <li><a href="team.html">Equipe</a></li>
                                     <li><a href="faq.html">FAQ</a></li>
                                     <li><a href="404.html">404</a></li>
-                                    <li><a href="shop.html">Shop</a></li>
-                                    <li><a href="shop-single.html">Shop single</a></li>
+                                    <li><a href="shop.html">Loja</a></li>
+                                    <li><a href="shop-single.html">Produto único</a></li>
                                 </ul>
                             </li>
                             <li class="menu-item-has-children">
-                                <a href="#">Services</a>
+                                <a href="#">Serviços</a>
                                 <ul class="sub-menu">
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-s2.html">Services style 2</a></li>
-                                    <li><a href="service-single.html">Mechanical Engineering</a></li>
-                                    <li><a href="oil-gas.html">Oil And Gas</a></li>
-                                    <li><a href="power-energy.html">Power And Energy</a></li>
-                                    <li><a href="sanitary-plumbing.html">Sanitary & Plumbing</a></li>
-                                    <li><a href="electrical-power.html">Electrical Power</a></li>
+                                    <li><a href="services.html">Serviços</a></li>
+                                    <li><a href="services-s2.html">Serviços estilo 2</a></li>
+                                    <li><a href="service-single.html">Engenharia Mecânica</a></li>
+                                    <li><a href="oil-gas.html">Óleo e Gás</a></li>
+                                    <li><a href="power-energy.html">Energia</a></li>
+                                    <li><a href="sanitary-plumbing.html">Hidráulica & Saneamento</a></li>
+                                    <li><a href="electrical-power.html">Energia Elétrica</a></li>
                                 </ul>
                             </li>
                             <li class="menu-item-has-children">
-                                <a href="#">Projects</a>
+                                <a href="#">Projetos</a>
                                 <ul class="sub-menu">
-                                    <li><a href="portfolio.html">Projects</a></li>
-                                    <li><a href="portfolio-s2.html">Projects style 2</a></li>
-                                    <li><a href="project-single.html">Project single</a></li>
+                                    <li><a href="portfolio.html">Projetos</a></li>
+                                    <li><a href="portfolio-s2.html">Projetos estilo 2</a></li>
+                                    <li><a href="project-single.html">Projeto único</a></li>
                                 </ul>
                             </li>
                             <li class="menu-item-has-children">
                                 <a href="#">Blog</a>
                                 <ul class="sub-menu">
                                     <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="blog-left-sidebar.html">Blog left sidebar</a></li>
-                                    <li><a href="blog-fullwidth.html">Blog full width</a></li>
+                                    <li><a href="blog-left-sidebar.html">Blog com barra lateral esquerda</a></li>
+                                    <li><a href="blog-fullwidth.html">Blog largura total</a></li>
                                     <li class="menu-item-has-children">
                                         <a href="#Level3">Blog single</a>
                                         <ul class="sub-menu">
-                                            <li><a href="blog-single.html">Blog single</a></li>
-                                            <li><a href="blog-single-left-sidebar.html">Blog single left sidebar</a></li>
-                                            <li><a href="blog-single-fullwidth.html">Blog single full width</a></li>
+                                            <li><a href="blog-single.html">Blog único</a></li>
+                                            <li><a href="blog-single-left-sidebar.html">Blog único barra lateral esquerda</a></li>
+                                            <li><a href="blog-single-fullwidth.html">Blog único largura total</a></li>
                                         </ul>
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact.html">Contato</a></li>
                         </ul>
                     </div><!-- end of nav-collapse -->
 
@@ -140,7 +140,7 @@
                             <div class="header-search-form">
                                 <form class="form">
                                     <div>
-                                        <input type="text" class="form-control" placeholder="Search here">
+                                        <input type="text" class="form-control" placeholder="Pesquisar aqui">
                                     </div>
                                     <button type="submit" class="btn"><i class="ti-search"></i></button>
                                 </form>
@@ -152,10 +152,10 @@
                         <div class="contact">
                             <div class="call">
                                 <i class="fi flaticon-call"></i>
-                                <p>Call us anytime</p>
+                                <p>Ligue a qualquer momento</p>
                                 <h5>+65487441584</h5>
                             </div>
-                            <a href="#" class="theme-btn">Contact us</a>
+                            <a href="#" class="theme-btn">Fale conosco</a>
                         </div>
                     </div>
                 </div><!-- end of container -->
@@ -172,15 +172,15 @@
                         <div class="slide-inner slide-bg-image" data-background="assets/images/slider/slide-1.jpg">
                             <div class="container">
                                 <div data-swiper-parallax="300" class="slide-title">
-                                    <h2>The Best Move you will Ever Make</h2>
+                                    <h2>A melhor decisão que você vai tomar</h2>
                                 </div>
                                 <div data-swiper-parallax="400" class="slide-text">
-                                    <p>Recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat and fur boa</p>
+                                    <p>Recém recortado de uma revista ilustrada e colocado em uma bela moldura dourada. Mostrava uma senhora com chapéu de pele e estola de pele.</p>
                                 </div>
                                 <div class="clearfix"></div>
                                 <div data-swiper-parallax="500" class="slide-btns">
-                                    <a href="#" class="theme-btn">Our services</a> 
-                                    <a href="#" class="theme-btn-s2">More about us</a> 
+                                    <a href="#" class="theme-btn">Nossos serviços</a> 
+                                    <a href="#" class="theme-btn-s2">Saiba mais sobre nós</a> 
                                 </div>
                             </div>
                         </div> <!-- end slide-inner --> 
@@ -221,24 +221,24 @@
                 <div class="row">
                     <div class="col col-md-6">
                         <div class="section-title">
-                            <span>About us</span>
-                            <h2>We set the standards others try to live up to.</h2>
+                            <span>Sobre nós</span>
+                            <h2>Definimos os padrões que outros tentam alcançar.</h2>
                         </div>
                         <div class="details">
-                            <p>It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat and fur boa who sat upright</p>
+                            <p>Não era um sonho. Seu quarto, um quarto humano adequado, embora um pouco pequeno, estava pacificamente entre suas quatro paredes familiares. Uma coleção de amostras de tecido estava espalhada sobre a mesa - Samsa era um caixeiro viajante - e acima dela pendia uma imagem que ele havia recortado recentemente de uma revista ilustrada e colocado em uma bela moldura dourada. Mostrava uma senhora com chapéu de pele e estola de pele sentada ereta.</p>
                             <div class="clearfix">
                                 <ul>
-                                    <li><i class="ti-check"></i> Cut out of an illustrated magazine</li>
-                                    <li><i class="ti-check"></i> Showed a lady fitted out</li>
+                                    <li><i class="ti-check"></i> Recortado de uma revista ilustrada</li>
+                                    <li><i class="ti-check"></i> Mostrava uma senhora elegante</li>
                                 </ul>
                                 <ul>
-                                    <li><i class="ti-check"></i> Raising a heavy fur muff</li>
-                                    <li><i class="ti-check"></i> Magazine and housed in a nice</li>
+                                    <li><i class="ti-check"></i> Erguendo uma pesada estola de pele</li>
+                                    <li><i class="ti-check"></i> Revista em uma bela moldura</li>
                                 </ul>
                             </div>
                             <div class="btns">
-                                <a href="#" class="theme-btn">Our Services</a>
-                                <a href="#" class="theme-btn-s3">Contact with us</a>
+                                <a href="#" class="theme-btn">Nossos Serviços</a>
+                                <a href="#" class="theme-btn-s3">Fale conosco</a>
                             </div>
                         </div>
                     </div>
@@ -248,7 +248,7 @@
                                 <img src="assets/images/about.png" alt>
                             </div>
                             <div class="video-holder">
-                                <a href="https://www.youtube.com/embed/7e90gBu4pas?autoplay=1" class="hero-video-btn video-btn"  data-type="iframe" tabindex="0"><i class="fi flaticon-play-button"></i>Watch our intro video</a> 
+                                <a href="https://www.youtube.com/embed/7e90gBu4pas?autoplay=1" class="hero-video-btn video-btn"  data-type="iframe" tabindex="0"><i class="fi flaticon-play-button"></i>Assista nosso vídeo de introdução</a> 
                             </div>
                         </div>
                     </div>
